# JaegerAnomalyDetection

./: .dockerignore  .drone.yml  .gitignore  .vc.yaml  Cargo.toml  Dockerfile  Makefile  catalog-info.yaml  devspace.yaml  openapi.json
.cargo/: audit.toml
docs/: Application Alerting.pptx  readme.md
engine/: Cargo.toml
engine/src/: accum.rs  config.rs  error.rs  graph.rs  jaeger.rs  main.rs  metrics.rs  opensearch.rs  schema.rs  state.rs  web.rs  welford.rs  window.rs
engine/src/processor/: anomaly_score.rs  histogram.rs  mean_stddev.rs  metric.rs  mod.rs  proc.rs  source.rs  span.rs  stats.rs  summary.rs  trace.rs
lib/: Cargo.toml
lib/src/: anomaly_score.rs  config.rs  lib.rs
lib/src/exprs/: mod.rs  precalculated.rs  welford.rs
