[package]
name = "jaeger-anomaly-detection-engine"
description = "Daemon detecting anomalies in Jaeger tracing data"
version = "0.1.1-acc.27"
authors = ["Maarten Deprez <mdp@continuousc.eu>"]
repository = "https://github.com/ContinuousC/JaegerAnomalyDetection.git"
license = "Elastic-2.0"
edition = "2021"
publish = false

[dependencies]
actix-web = "4.5.1"
chrono = { version = "0.4.38", features = ["serde"] }
ciborium = "0.2.2"
clap = { version = "4.5.4", features = ["derive", "env"] }
env_logger = "0.11.3"
log = "0.4.21"
prometheus_remote_write = { registry = "si", version = "0.2.1" }
reqwest = { version = "0.12.4", features = ["json", "native-tls"] }
rustc_apfloat = "0.2.0"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
serde_yaml = "0.9.34"
serde_with = "3.7.0"
statrs = "0.16.0"
tap = "1.0.1"
tdigest = { version = "0.2.3", features = ["use_serde"] }
thiserror = "1.0.60"
tokio = { version = "1.37.0", features = [
    "macros",
    "rt-multi-thread",
    "net",
    "tracing",
    "fs",
] }
url = "2.5.0"
tracing = "0.1.40"
tracing-actix-web = "0.7.10"
actix-http = "3.6.0"
actix-service = "2.0.2"
jaeger-anomaly-detection = { version = "=0.1.0-acc.34", registry = "si", features = [
    "apistos",
] }
schemars = "0.8"
apistos = "0.2.4"


# Local dependencies

prometheus-core = { version = "=0.1.2-acc.8", registry = "si", features = [
    "dbschema",
] }
prometheus-expr = { version = "=0.1.2-acc.8", registry = "si", features = [
    "api",
    "schema",
    "schemars",
] }
prometheus-schema = { version = "=0.1.25-acc.23", registry = "si", features = [
    "schemars",
] }
prometheus-api = { version = "=0.1.2-acc.21", registry = "si" }
regex = "1.10.4"
ieee-apsqrt = "0.1.1"
distrs = "0.2.2"
ordered-float = "4.6.0"
