[package]
name = "jaeger-anomaly-detection"
description = "Daemon detecting anomalies in Jaeger tracing data (shared components)"
version = "0.1.0-acc.34"
authors = ["Maarten Deprez <mdp@continuousc.eu>"]
repository = "https://github.com/ContinuousC/JaegerAnomalyDetection.git"
license = "Elastic-2.0"
edition = "2021"
publish = false


[features]
default = []
apistos = ["dep:apistos", "schemars"]
schemars = [
    "dep:schemars",
    "prometheus-expr/schemars",
    "prometheus-schema/schemars",
]
tsify = ["dep:tsify", "dep:wasm-bindgen"]

[dependencies]
apistos = { version = "0.2.4", optional = true }
# schemars = { version = "0.8", optional = true }
schemars = { registry = "si", version = "0.8.22", optional = true }
serde = { version = "1.0.198", features = ["derive"] }
tsify = { registry = "si", version = "0.4.6", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
statrs = "0.16.0"
tap = "1.0.1"
ordered-float = "4.5.0"
thiserror = "2.0.9"
serde_with = "3.12.0"
chrono = "0.4.39"

# Local dependencies

prometheus-core = { version = "=0.1.2-acc.8", registry = "si" }
prometheus-expr = { version = "=0.1.2-acc.8", registry = "si", features = [
    "api",
    "schema",
] }
prometheus-api = { version = "=0.1.2-acc.21", registry = "si" }
prometheus-schema = { version = "=0.1.25-acc.23", registry = "si" }
const_format = "0.2.34"
unit = { version = "0.1.15", registry = "si" }


# For webassembly, enable the "js" feature in getrandom.
[target.'cfg(target_family = "wasm")'.dependencies.getrandom]
version = "0.2"
features = ["js"]

[dev-dependencies]
serde_json = "1.0.138"
